04-k8s-gateway-monitoring-scaling/manifests/whoami-route.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: whoami-route
spec:
  parentRefs:
    - name: whoami-gateway
  hostnames:
    - "app.dost.naquadah.alak"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: whoami-svc
          port: 80
